--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "challenge-6-list-users",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://briantam23.github.io/challenge-6-list-users/",
   "babel": {
     "presets": [
       "env",
@@ -29,7 +30,9 @@
     "test": "mocha ./test/*.test.js --require babel-polyfill --require ignore-styles --require babel-core/register",
     "test:dev": "npm test -- --watch",
     "eject": "react-scripts eject",
-    "lint": "./node_modules/.bin/eslint ./"
+    "lint": "./node_modules/.bin/eslint ./",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -46,6 +49,7 @@
     "eslint-plugin-babel": "^4.1.2",
     "eslint-plugin-jasmine": "^2.9.1",
     "eslint-plugin-react": "^7.5.1",
+    "gh-pages": "^2.0.1",
     "ignore-styles": "^5.0.1",
     "mocha": "^6.2.0"
   }
